test/klee-out-18/test000012.kquery
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 N0:(ReadLSB w32 0 x)))
         (Eq (SDiv w32 N1:(Mul w32 N0 N0) N0)
             N0)
         (Eq false
             (Eq 0
                 N2:(ReadLSB w32 0 y)))
         (Eq (SDiv w32 N3:(Mul w32 N2 N2) N2)
             N2)
         (Slt N1 (Sub w32 2147483647 N3))
         (Eq false
             (Sle 2
                  (SDiv w32 (Add w32 N1 N3) 2)))]
        false)
